test/invalid/baseline/dict-no-default.txt
Syntax error at line 2, since `dictionary GPUColorStateDescriptor`:
    GPUColorWriteFlags writeMask = GPUColorWriteBits.ALL;
                                   ^ No value for default
